added nav stylels

--- a/fildset.html
+++ b/fildset.html
@@ -5,19 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form practices</title>
     <style>
+        *{
+            margin: 0;
+        }
         form{
             background-color: aquamarine;
             display: flex;
             flex-direction: column;
             gap: 9px;
         }
+        h2, div, fieldset{
+            padding: 10px;
+        }
         label{
             display: block;
+        }
+        nav{
+            background-color: rgba(0, 0, 0, 0.185);
+        }
+        nav> ul{
+            display: flex;
+            justify-content: end;
+            gap: 20px;
+            padding: 10px;
+        }
+        nav ul li a{
+            text-decoration: none;
+            color: black;
+        }
+        li{
+            list-style: none;
+            
         }
 
     </style>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li class="nav"><a href="">Home</a></li>
+            <li class="nav"><a href="">About Me</a></li>
+            <li class="nav"><a href="fildset.html">My Project</a></li>
+            <li class="nav"><a href="video.html">Video files</a></li>
+            <li class="nav"><a href="video.html">Audeo files</a></li>
+        </ul>
+    </nav>
+
+
+
+
+
+
+
+
     <form action="">
         <h2>Submit the form</h2>
         <div>
