--- a/fildset.html
+++ b/fildset.html
@@ -14,6 +14,8 @@
             flex-direction: column;
             gap: 9px;
         }
+
+        /* Nav section starts here */
         h2, div, fieldset{
             padding: 10px;
         }
@@ -37,7 +39,7 @@
             list-style: none;
             
         }
-
+        /* Nav section ends here */
     </style>
 </head>
 <body>
@@ -47,7 +49,7 @@
             <li class="nav"><a href="">About Me</a></li>
             <li class="nav"><a href="fildset.html">My Project</a></li>
             <li class="nav"><a href="video.html">Video files</a></li>
-            <li class="nav"><a href="video.html">Audeo files</a></li>
+            <li class="nav"><a href="table.html">Table</a></li>
         </ul>
     </nav>
 
