--- a/video.html
+++ b/video.html
@@ -7,6 +7,7 @@
     <style>
          *{
             margin: 0;
+        }
          nav{
             background-color: rgba(0, 0, 0, 0.185);
         }
@@ -33,7 +34,7 @@
             <li class="nav"><a href="">About Me</a></li>
             <li class="nav"><a href="fildset.html">My Project</a></li>
             <li class="nav"><a href="video.html">Video files</a></li>
-            <li class="nav"><a href="video.html">Audeo files</a></li>
+            <li class="nav"><a href="table.html">Table</a></li>
         </ul>
     </nav>
     <div class="audio">
