--- a/table.html
+++ b/table.html
@@ -16,6 +16,9 @@
         }
         nav{
             background-color: rgba(0, 0, 0, 0.185);
+            height: 65px;
+            display: flex;
+            justify-content: space-between;
         }
         nav> ul{
             display: flex;
@@ -44,6 +47,7 @@
 <body>
 
     <nav>
+        <div class="logo"><h3>Sifat.</h3></div>
         <ul>
             <li class="nav"><a href="">Home</a></li>
             <li class="nav"><a href="">About Me</a></li>
