--- a/video.html
+++ b/video.html
@@ -8,8 +8,11 @@
          *{
             margin: 0;
         }
-         nav{
+        nav{
             background-color: rgba(0, 0, 0, 0.185);
+            height: 65px;
+            display: flex;
+            justify-content: space-between;
         }
         nav> ul{
             display: flex;
@@ -29,6 +32,7 @@
 </head>
 <body>
     <nav>
+        <div class="logo"><h3>Sifat.</h3></div>
         <ul>
             <li class="nav"><a href="">Home</a></li>
             <li class="nav"><a href="">About Me</a></li>
